--- a/train_and_validate.ipynb
+++ b/train_and_validate.ipynb
@@ -261,7 +261,7 @@
     "target_list = sorted(glob.glob(os.path.join(target_path, '*.npy')))\n",
     "# Shuffle the file list if needed\n",
     "numbers = list(range(len(file_list)))\n",
-    "numbers = np.random.shuffle(numbers)\n",
+    "np.random.shuffle(numbers)\n",
     "print(numbers)\n",
     "# Define a custom data generator iterator\n",
     "def data_generator(file_list, target_list, numbers, epochs):\n",
